Bug 1650629: Correctly wait when requested and report whether work was done by ProcessNextEvent when using TaskController. r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D83004